# esig-openenv

./: .env.example  .gitignore  ADVANCED_README.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FINAL_CHECKLIST.md  FINAL_VERIFICATION_REPORT.md  IMPROVEMENTS_SUMMARY.md  PUSH_TO_GITHUB.md  PUSH_TO_HUGGINGFACE.md  QUICK_START_DEPLOYMENT.md  README.md  SUBMISSION_CHECKLIST.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  space.yaml  test_api.py  verify_enhancements.py  verify_local.py
server/: __init__.py  analytics.py  app.py  main.py
server/env/: __init__.py  db_manager.py  erp_db.py  erp_enhanced.py  gymnasium_wrapper.py  models.py  ocr_stub.py  state_manager.py
server/graders/: __init__.py  grader_easy.py  grader_expert.py  grader_hard.py  grader_medium.py
server/reward/: __init__.py  reply_evaluator.py  shaper.py
server/tasks/: __init__.py  advanced_threats.py  task1_triage.py  task2_erp_lookup.py  task3_adversarial.py  task4_expert.py
tests/: test_spec.py
