[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esig-openenv"
version = "2.0.0"
description = "Enterprise Shared-Inbox Guardian - OpenEnv training environment for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ESIG Team", email = "dev@esig.local"}
]
keywords = ["openenv", "reinforcement-learning", "email", "training-environment", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "pdfminer.six==20221105",
    "faker==25.2.0",
    "httpx==0.27.0",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.7",
    "gymnasium==0.29.1",
    "numpy==1.24.3",
    "python-dotenv==1.0.0",
]

[project.urls]
Homepage = "https://github.com/naga137/esig-openenv"
Repository = "https://github.com/naga137/esig-openenv"
Documentation = "https://github.com/naga137/esig-openenv#readme"
Issues = "https://github.com/naga137/esig-openenv/issues"

[tool.setuptools]
packages = ["server"]

[tool.setuptools.package-data]
server = ["**/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint]
disable = ["C0103", "W0511"]
